--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 			<div class="col-md-2 col-xs-2 bulb-holder">
 				<div class="bulb" id="bulb_red"></div>
 			</div>
+			<div class="col-md-2 col-xs-2 bulb-holder">
+				<div class="bulb" id="bulb_blue"></div>	
+			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
 					<img src="banner.png" class="bannar">
